[project]
name = "thema-tui"
version = "0.1.0"
description = "Interactive TUI for browsing and testing Thema API endpoints"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tui"]

[project.scripts]
thema-tui = "tui.app:main"

[tool.ruff]
lint.select = ["E", "F", "I", "Q"]
